[gd_scene load_steps=23 format=3 uid="uid://bshmglkckkwow"]

[ext_resource type="Script" path="res://entities/mushroom/enemy.gd" id="1_wc4m8"]
[ext_resource type="Script" path="res://entities/mushroom/scripts/enemy_state_machine.gd" id="2_ifisw"]
[ext_resource type="Script" path="res://entities/mushroom/scripts/state/move.gd" id="3_grwv7"]
[ext_resource type="Script" path="res://entities/mushroom/scripts/state/death.gd" id="4_8j4k0"]
[ext_resource type="Texture2D" uid="uid://6aly8kxon2pk" path="res://entities/mushroom/sprites/jump/_0005_6.png" id="5_hdfdh"]
[ext_resource type="Texture2D" uid="uid://bvmc7hqtp6dka" path="res://entities/mushroom/sprites/walking/0__0000_Layer-1.png" id="6_vs5n1"]
[ext_resource type="Texture2D" uid="uid://cqefvw54penfq" path="res://entities/mushroom/sprites/walking/0__0001_Layer-2.png" id="7_x1df5"]
[ext_resource type="Texture2D" uid="uid://cx3dncajw3o5h" path="res://entities/mushroom/sprites/walking/0__0002_Layer-3.png" id="8_kpk3j"]
[ext_resource type="Texture2D" uid="uid://cx30ix6mcr8gm" path="res://entities/mushroom/sprites/walking/0__0003_Layer-4.png" id="9_esdnp"]
[ext_resource type="Texture2D" uid="uid://bcpqn3ndgffcl" path="res://entities/mushroom/sprites/walking/0__0004_Layer-5.png" id="10_wi38j"]
[ext_resource type="Texture2D" uid="uid://c3irgxu1d5ksy" path="res://entities/mushroom/sprites/walking/0__0005_Layer-6.png" id="11_w7luh"]
[ext_resource type="Texture2D" uid="uid://ods2c8lm5xk1" path="res://entities/mushroom/sprites/walking/0__0006_Layer-7.png" id="12_qsl4c"]
[ext_resource type="Texture2D" uid="uid://01o1ommn2wfx" path="res://entities/mushroom/sprites/walking/0__0007_Layer-8.png" id="13_na6un"]
[ext_resource type="Texture2D" uid="uid://dl21asd07qumf" path="res://entities/mushroom/sprites/walking/0__0008_Layer-9.png" id="14_crpka"]
[ext_resource type="Texture2D" uid="uid://cjbt2o3k5tncf" path="res://entities/mushroom/sprites/walking/0__0009_Layer-10.png" id="15_xclyn"]
[ext_resource type="Script" path="res://entities/mushroom/scripts/enemy_movement.gd" id="16_n58bn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b62i0"]
size = Vector2(21.25, 16)

[sub_resource type="Animation" id="Animation_ih1gx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hdfdh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, -1.92)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:shape:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21.25, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0.5)]
}

[sub_resource type="Animation" id="Animation_mh7jl"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hdfdh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, -1.92)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.71)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 0), Vector2(2.08165e-12, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:shape:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21.25, 16)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aqmie"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_vs5n1"), ExtResource("7_x1df5"), ExtResource("8_kpk3j"), ExtResource("9_esdnp"), ExtResource("10_wi38j"), ExtResource("11_w7luh"), ExtResource("12_qsl4c"), ExtResource("13_na6un"), ExtResource("14_crpka"), ExtResource("15_xclyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(2.08165e-12, -0.5), Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 2), Vector2(2.08165e-12, 1.5), Vector2(2.08165e-12, -0.5), Vector2(2.08165e-12, -1), Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 1.5), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.25)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21.25, 19.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bnuya"]
resource_name = "idle_legacy"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_vs5n1"), ExtResource("7_x1df5"), ExtResource("8_kpk3j"), ExtResource("9_esdnp"), ExtResource("10_wi38j"), ExtResource("11_w7luh"), ExtResource("12_qsl4c"), ExtResource("13_na6un"), ExtResource("14_crpka"), ExtResource("15_xclyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(2.08165e-12, -0.5), Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 2), Vector2(2.08165e-12, 1.5), Vector2(2.08165e-12, -0.5), Vector2(2.08165e-12, -1), Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 1.5), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -1), Vector2(0, -0.5), Vector2(0, 0), Vector2(0, 2), Vector2(0, 1.5), Vector2(0, -0.5), Vector2(0, -1), Vector2(0, 0), Vector2(2.08165e-12, 1.5), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(22, 26), Vector2(22, 25), Vector2(22, 24), Vector2(25, 20), Vector2(22.5, 21), Vector2(22.5, 25), Vector2(22.5, 26), Vector2(21.25, 24), Vector2(25, 21), Vector2(25, 24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivgey"]
_data = {
"RESET": SubResource("Animation_ih1gx"),
"death": SubResource("Animation_mh7jl"),
"idle": SubResource("Animation_aqmie"),
"idle_legacy": SubResource("Animation_bnuya")
}

[node name="Mushroom" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "animations", "death_state")]
scale = Vector2(0.75, 0.75)
collision_layer = 3
floor_stop_on_slope = false
script = ExtResource("1_wc4m8")
state_machine = NodePath("StateMachine")
animations = NodePath("AnimationPlayer")
death_state = NodePath("StateMachine/death")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 4)
texture = ExtResource("5_hdfdh")
offset = Vector2(-18, -1.92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_b62i0")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animations", "movement_controller", "starting_state")]
script = ExtResource("2_ifisw")
animations = NodePath("../AnimationPlayer")
movement_controller = NodePath("../MovementController")
starting_state = NodePath("move")

[node name="move" type="Node" parent="StateMachine"]
script = ExtResource("3_grwv7")
animation_name = "idle"
directional = false

[node name="death" type="Node" parent="StateMachine" node_paths=PackedStringArray("screen_notifier")]
script = ExtResource("4_8j4k0")
screen_notifier = NodePath("../../VisibleOnScreenNotifier2D")
animation_name = "death"
directional = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ivgey")
}
autoplay = "idle"

[node name="MovementController" type="Node2D" parent="." node_paths=PackedStringArray("body", "sprite")]
script = ExtResource("16_n58bn")
body = NodePath("..")
sprite = NodePath("../Sprite2D")

[node name="Rays" type="Node2D" parent="MovementController"]

[node name="down_left" type="RayCast2D" parent="MovementController/Rays"]
position = Vector2(-16, 2.08165e-12)
target_position = Vector2(2.08165e-12, 32)

[node name="down_right" type="RayCast2D" parent="MovementController/Rays"]
position = Vector2(16, 2.08165e-12)
target_position = Vector2(2.08165e-12, 32)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
